--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,41 @@
-node_modules
+# Dependency directories
+node_modules/
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build / dist
 dist
+build
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+
+# Temp files
+temp/
+tmp/
+*.tmp
+
+# Coverage directory
+coverage/
+
+# IDE / Editors
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs
+logs
+*.log
+
+# Backups
+*.backup
+*.bak
